se agrego informacion sobre las plantillas del sitio home y productos

--- a/revision.html
+++ b/revision.html
@@ -49,22 +49,19 @@
 
 </head>
 
-<body
-    class="toolbar-icon-9 toolbar-tray-open toolbar-horizontal toolbar-fixed toolbar-loading user-logged-in path-frontpage">
+<body class="toolbar-icon-9 toolbar-tray-open toolbar-horizontal toolbar-fixed toolbar-loading user-logged-in path-frontpage">
     <a href="#main-content" class="visually-hidden focusable skip-link">
         Pasar al contenido principal
     </a>
     <div id="toolbar-administration" role="group" aria-label="Barra de administración del sitio web" class="toolbar">
-        <nav id="toolbar-bar" role="navigation" aria-label="Elementos de la barra de herramientas"
-            class="toolbar-bar clearfix">
+        <nav id="toolbar-bar" role="navigation" aria-label="Elementos de la barra de herramientas" class="toolbar-bar clearfix">
             <h2 class="visually-hidden">Elementos de la barra de herramientas</h2>
             <div class="home-toolbar-tab toolbar-tab">
-                <a href="/" title="Regresar al contenido del sitio"
-                    class="toolbar-icon toolbar-icon-escape-admin toolbar-item" data-toolbar-escape-admin>Regresar al
+                <a href="/" title="Regresar al contenido del sitio" class="toolbar-icon toolbar-icon-escape-admin toolbar-item" data-toolbar-escape-admin>Regresar al
                     sitio</a>
-                <div>
-                    <nav class="toolbar-lining clearfix" role="navigation"></nav>
-                </div>
+            <div>
+            <nav class="toolbar-lining clearfix" role="navigation"></nav>
+    </div>
             </div>
             <div class="toolbar-tab">
                 <a href="/admin" title="Menú de administración"
@@ -1633,8 +1630,8 @@
                                                         class="toolbar-icon toolbar-icon-system-file-system-settings"
                                                         data-drupal-link-system-path="admin/config/media/file-system">Sistema
                                                         de archivos</a></li>
-                                                <li class="menu-item"><a
-                                                        href="/admin/config/media/responsive-image-style"
+                                                <li class="menu-item">
+                                                    <a href="/admin/config/media/responsive-image-style"
                                                         title="Administrar los estilos de imagen adaptables."
                                                         class="toolbar-icon toolbar-icon-entity-responsive-image-style-collection"
                                                         data-drupal-link-system-path="admin/config/media/responsive-image-style">Estilos
@@ -2043,9 +2040,10 @@ var meses = new Array ("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio",
                                 </div>
 
                             </div>
-                            <div id="block-business-responsive-theme-branding" class="contextual-region site-branding block block-system block-system-branding-block">
+                            <div id="block-business-responsive-theme-branding"
+                                class="contextual-region site-branding block block-system block-system-branding-block">
 
-                                <div data-contextual-id="block:block=business_responsive_theme_branding:langcode=es" 
+                                <div data-contextual-id="block:block=business_responsive_theme_branding:langcode=es"
                                     data-contextual-token="milaD-NQk0LJyJNj_FTIMYxPXe71jk2IBTIj6uLlgM0"></div>
                                 <div class="brand logo">
                                     <a href="/" title="Inicio" rel="home" class="site-branding__logo">
@@ -2400,7 +2398,8 @@ var meses = new Array ("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio",
 
 
 
-                                            <div data-quickedit-field-id="block_content/32/body/es/layout_builder-default-0-87088f6d_27cc_4302_9623_20bfd89d1a65-32-0408dc7d494c40c8c58d3afe05b0668e51633fd189e1f9ef6aba72d7b4c3f72d">
+                                            <div
+                                                data-quickedit-field-id="block_content/32/body/es/layout_builder-default-0-87088f6d_27cc_4302_9623_20bfd89d1a65-32-0408dc7d494c40c8c58d3afe05b0668e51633fd189e1f9ef6aba72d7b4c3f72d">
                                                 <img alt="banner" data-entity-type="file"
                                                     data-entity-uuid="dcad3dfb-6af2-4df7-a4ee-3d95df22a0f2" height="102"
                                                     src="/sites/default/files/inline-images/banner.jpg" width="489"
