se actualizaron las vistas agregando información al pie de pagina

--- a/sitiogaseosaslacigarra/index.html
+++ b/sitiogaseosaslacigarra/index.html
@@ -36,20 +36,20 @@
             </nav>
         </div>
         <div class="contenido">
-            <div class="titulo">
+            <!-- <div class="titulo">
                 <h2>Línea de Productos</h2>
-            </div>
-            <div class="filauno">
+            </div> -->
+            <!-- <div class="filauno">
                 <a href="./templates/agua.html"><img src="./img/agua.png" alt=""></a>
                 <a href="./templates/cafe.html"><img src="./img/cafe.png" alt=""></a>
                 <a href="./templates/frituras.html"><img src="./img/fritura.png" alt=""></a>
                 <a href="./templates/gaseosas.html"><img src="./img/gaseosa.png" alt=""></a>
                 <a href="./templates/jugos.html"> <img src="./img/jugos.png" alt=""></a>
                 <a href="./templates/panaderia.html"><img src="./img/panaderia.png" alt=""></a>
-            </div>
+            </div> -->
             <div class="filados">
 
-                <div id="subtitulo" class="subtitulo">
+                <!-- <div id="subtitulo" class="subtitulo">
                     <h2>Nosotros</h2>
                 </div>
                 <div id="nosotros" class="parrafo">
@@ -63,11 +63,21 @@
                         11 años no se lograron ganancias importantes, hasta que finalmente los sacrificios dieron sus
                         frutos y la empresa se estabilizó y entró por la ruta del progreso que la caracteriza hoy.</p>
                     
-                </div>
+                </div> -->
                 <div class="imagen">
 
                     <img id="imagenobj" src="./img/lacigarralocal.jpg" alt="">
                     <div class="div">
+                        <h2>Nosotros</h2>
+                        <p>Industria La Cigarra S.A.S. Lleva 77 años de existencia y siendo unas de las empresas más
+                            consolidadas y solidas de la región. Fundada por el ciudadano pastuso Isaac Zamora el 27 de
+                            agosto de 1944 quien apoyado del empresario Sr Hernando Suarez Burgos en el año de 1984 dio
+                            continuidad al trabajo realizado, cuando la empresa afronto una difícil situación económica
+                            amenazando su clausura. Se reconoce entonces, que la política de intenso y denodado trabajo que
+                            caracteriza todas las actividades de Suárez Burgos fue definitiva para que la situación
+                            comenzara a mejorar. No fue una tarea fácil. A pesar de todos los esfuerzos desplegados, durante
+                            11 años no se lograron ganancias importantes, hasta que finalmente los sacrificios dieron sus
+                            frutos y la empresa se estabilizó y entró por la ruta del progreso que la caracteriza hoy.</p>
                         <h3>Nuestros Objetivos</h3>
                         <ul>
                             <li>Fabricar productos bajo un sistema de producción eficiente, que permita establecer en el
@@ -101,13 +111,7 @@
                             <h2>Misión</h2>
                         </div>
                         <div class="parrafo">
-                            <p>Es política de la empresa conocer las necesidades expresas o implícitas de los clientes y
-                                a su vez dar respuesta con un alto nivel de calidad que satisfaga sus expectativas
-                                eficaz y eficientemente fortaleciendo nuestra imagen empresarial con productos de buena
-                                calidad e innovación dentro de las especificaciones establecidas. De manera que nuestra
-                                empresa proporcione productos y servicios oportunos; contando con excelentes condiciones
-                                de trabajo, seguridad y profesionalismo mejorando así el desempeño laboral y
-                                empresarial.</p>
+                            <p>Una empresa dedicada a la producción de gaseosas, aguas, frescos, jugos y otras líneas de productos que se caracterizan por su excelente calidad y completo agrado para nuestros clientes, diferenciándonos en el mercado por tener productos exclusivamente nariñenses, con muchos años de servicio, siendo generadora de empleo y desarrollo regional; y utilizando materia prima de óptima calidad, actuando con integridad y entregando productos excelentes a los consumidores a precio justo.</p>
                         </div>
                     </div>
                     <div class="secciontres">
@@ -115,13 +119,7 @@
                             <h2>Visión</h2>
                         </div>
                         <div class="parrafo">
-                            <p>Es política de la empresa conocer las necesidades expresas o implícitas de los clientes y
-                                a su vez dar respuesta con un alto nivel de calidad que satisfaga sus expectativas
-                                eficaz y eficientemente fortaleciendo nuestra imagen empresarial con productos de buena
-                                calidad e innovación dentro de las especificaciones establecidas. De manera que nuestra
-                                empresa proporcione productos y servicios oportunos; contando con excelentes condiciones
-                                de trabajo, seguridad y profesionalismo mejorando así el desempeño laboral y
-                                empresarial.</p>
+                            <p>Ser una empresa líder en el mercado regional proyectada a expandir su mercado a nivel nacional dentro de cinco años logrando un posicionamiento de nuestros productos, contando con tecnología de punta y excelentes instalaciones, además se brindará una variedad de productos con una excelente presentación, calidad y mejores precios.</p>
                         </div>
                     </div>
                 </div>
@@ -159,6 +157,14 @@
                                 class="fab fa-instagram"></i></a></li>
                 </ul>
 
+            </div>
+            <div class="contacto">
+                <ul>
+                    <li><i class="fas fa-phone-volume"></i> Local: 721 5384</li>
+                    <li><i class="fas fa-phone"></i> Móvil: 313 828 4715 / 316 546 2714</li>
+                    <li>Correo: lacigarra84@hotmail.com</li>
+                    <li>Dirección: Calle 12 No. 4-84 Barrio Chapal Pasto-Nariño</li>
+                </ul>
             </div>
         </div>
 
